@@ -16,13 +16,20 @@
 
 package com.jayway.restassured.itest.java;
 
+import com.jayway.restassured.RestAssured;
 import com.jayway.restassured.itest.java.support.WithJetty;
+import com.jayway.restassured.path.json.config.JsonPathConfig;
 import org.junit.Test;
 
+import java.math.BigDecimal;
+
+import static com.jayway.restassured.RestAssured.expect;
 import static com.jayway.restassured.RestAssured.given;
 import static com.jayway.restassured.config.EncoderConfig.encoderConfig;
 import static com.jayway.restassured.config.RedirectConfig.redirectConfig;
 import static com.jayway.restassured.config.RestAssuredConfig.newConfig;
+import static com.jayway.restassured.path.json.config.JsonPathConfig.NumberReturnType.BIG_DECIMAL;
+import static com.jayway.restassured.path.json.config.JsonPathConfig.jsonPathConfig;
 import static org.hamcrest.Matchers.is;
 
 public class ConfigITest extends WithJetty {
@@ -48,5 +55,33 @@ public class ConfigITest extends WithJetty {
                 header("Content-Type", is("text/plain; charset=US-ASCII")).
         when().
                 post("/reflect");
+    }
+
+    @Test
+    public void supportsConfiguringJsonPathProperties() throws Exception {
+        given().
+                config(newConfig().jsonPathConfig(jsonPathConfig().numberReturnType(BIG_DECIMAL))).
+        expect().
+                root("store.book").
+                body("price.min()", is(new BigDecimal("8.95"))).
+                body("price.max()", is(new BigDecimal("22.99"))).
+        when().
+                get("/jsonStore");
+    }
+
+    @Test
+    public void supportsConfiguringJsonPathStatically() throws Exception {
+        RestAssured.config = newConfig().jsonPathConfig(jsonPathConfig().numberReturnType(BIG_DECIMAL));
+
+        try {
+        expect().
+                root("store.book").
+                body("price.min()", is(new BigDecimal("8.95"))).
+                body("price.max()", is(new BigDecimal("22.99"))).
+        when().
+                get("/jsonStore");
+        } finally {
+            RestAssured.reset();
+        }
     }
 }
