@@ -16,9 +16,9 @@
 
 package com.jayway.restassured.path.json;
 
+import com.jayway.restassured.exception.PathException;
 import com.jayway.restassured.path.json.config.JsonPathConfig;
 import com.jayway.restassured.path.json.support.Book;
-import groovy.json.JsonException;
 import org.junit.Test;
 
 import java.math.BigDecimal;
@@ -27,6 +27,7 @@ import java.util.Map;
 
 import static com.jayway.restassured.path.json.JsonPath.*;
 import static com.jayway.restassured.path.json.config.JsonPathConfig.NumberReturnType.BIG_DECIMAL;
+import static com.jayway.restassured.path.json.config.JsonPathConfig.NumberReturnType.FLOAT_AND_DOUBLE;
 import static org.hamcrest.Matchers.*;
 import static org.junit.Assert.assertThat;
 
@@ -130,21 +131,55 @@ public class JsonPathTest {
 
         final Map<String, Object> bicycle = store.get("bicycle");
         final String color = (String) bicycle.get("color");
-		final float price = (Float) bicycle.get("price");
+        final float price = (Float) bicycle.get("price");
         assertThat(color, equalTo("red"));
-		assertThat(price, equalTo(19.95f));
+        assertThat(price, equalTo(19.95f));
     }
 
     @Test
     public void getFloatAndDoublesAsBigDecimal() throws Exception {
-        final Map<String, Map> store = with(JSON).using(new JsonPathConfig(BIG_DECIMAL)).get("store");
-        assertThat(store.size(), equalTo(2));
+        final JsonPath using = with(JSON).using(new JsonPathConfig(BIG_DECIMAL));
+        assertThat(using.<Map<String, Map>>get("store").size(), equalTo(2));
 
-        final Map<String, Object> bicycle = store.get("bicycle");
+        final Map<String, Object> bicycle = using.<Map<String, Map>>get("store").get("bicycle");
         final String color = (String) bicycle.get("color");
-		final BigDecimal price = (BigDecimal) bicycle.get("price");
+        final BigDecimal price = (BigDecimal) bicycle.get("price");
         assertThat(color, equalTo("red"));
-		assertThat(price, equalTo(new BigDecimal(19.95)));
+        assertThat(price, equalTo(new BigDecimal("19.95")));
+    }
+
+    @Test
+    public void getFloatAndDoublesAsBigDecimalUsingStaticConfiguration() throws Exception {
+        JsonPath.config = new JsonPathConfig().numberReturnType(BIG_DECIMAL);
+        try {
+            final Map<String, Map> store = with(JSON).get("store");
+            assertThat(store.size(), equalTo(2));
+
+            final Map<String, Object> bicycle = store.get("bicycle");
+            final String color = (String) bicycle.get("color");
+            final BigDecimal price = (BigDecimal) bicycle.get("price");
+            assertThat(color, equalTo("red"));
+            assertThat(price, equalTo(new BigDecimal("19.95")));
+        } finally {
+            JsonPath.config = null;
+        }
+    }
+
+    @Test
+    public void nonStaticJsonPathConfigHasPrecedenceOverStaticConfiguration() throws Exception {
+        JsonPath.config = new JsonPathConfig().numberReturnType(FLOAT_AND_DOUBLE);
+        try {
+            final Map<String, Map> store = with(JSON).using(new JsonPathConfig(BIG_DECIMAL)).get("store");
+            assertThat(store.size(), equalTo(2));
+
+            final Map<String, Object> bicycle = store.get("bicycle");
+            final String color = (String) bicycle.get("color");
+            final BigDecimal price = (BigDecimal) bicycle.get("price");
+            assertThat(color, equalTo("red"));
+            assertThat(price, equalTo(new BigDecimal("19.95")));
+        } finally {
+            JsonPath.config = null;
+        }
     }
 
     @Test
@@ -273,7 +308,7 @@ public class JsonPathTest {
         assertThat(priceAsString, is("8.95"));
     }
 
-    @Test(expected = JsonException.class)
+    @Test(expected = PathException.class)
     public void malformedJson() throws Exception {
         from(MALFORMED_JSON).get("a");
     }
