@@ -10,6 +10,8 @@ Change log next version
 * It's not possible to configure REST Assured to return BigDecimal instead of floats and doubles. You can do this either statically using:  
 	  RestAssured.config = new RestAssuredConfig().jsonPathConfig(new JsonPathConfig(..));
 * Added support for automatically converting a String to BigDecimal in JsonPath
+* Non-backward compatible change: com.jayway.restassured.exception.ParsePathException was renamed to com.jayway.restassured.exception.PathException.
+* Non-backward compatible change: JsonPath now throws PathException instead of Groovy's JsonException when parsing JSON text when the JSON document is malformed.
 
 Change log 1.7.2 (2012-12-15)
 -----------------------------
